# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

group("crypto") {
  deps = [
    ":gcm_frame_decryptor",
    ":gcm_frame_encryptor",
    ":simple_frame_decryptor",
    ":simple_frame_encryptor",
    ":options",
  ]
}

rtc_library("simple_frame_encryptor") {
  visibility = [ "*" ]
  sources = [
    "simple_frame_encryptor.cc",
    "simple_frame_encryptor.h",
  ]
  deps = [
   ":frame_encryptor_interface",
  ]
}

rtc_library("simple_frame_decryptor") {
  visibility = [ "*" ]
  sources = [
    "simple_frame_decryptor.cc",
    "simple_frame_decryptor.h",
  ]
  deps = [
   ":frame_decryptor_interface",
  ]
}

rtc_library("gcm_frame_encryptor") {
  visibility = [ "*" ]
  sources = [
    "gcm_frame_encryptor.cc",
    "gcm_frame_encryptor.h",
  ]
  deps = [
   ":frame_encryptor_interface",
  ]

  if (rtc_build_ssl) {
    deps += [ "//third_party/boringssl" ]
  } else {
    configs += [ ":external_ssl_library" ]
  }
}

rtc_library("gcm_frame_decryptor") {
  visibility = [ "*" ]
  sources = [
    "gcm_frame_decryptor.cc",
    "gcm_frame_decryptor.h",
  ]
  deps = [
   ":frame_decryptor_interface",
  ]

  if (rtc_build_ssl) {
    deps += [ "//third_party/boringssl" ]
  } else {
    configs += [ ":external_ssl_library" ]
  }
}

rtc_library("options") {
  visibility = [ "*" ]
  sources = [
    "crypto_options.cc",
    "crypto_options.h",
  ]
  deps = [
    "../../rtc_base:rtc_base",
    "../../rtc_base/system:rtc_export",
  ]
}

rtc_source_set("frame_decryptor_interface") {
  visibility = [ "*" ]
  sources = [ "frame_decryptor_interface.h" ]
  deps = [
    "..:array_view",
    "..:rtp_parameters",
    "../../rtc_base:refcount",
  ]
}

rtc_source_set("frame_encryptor_interface") {
  visibility = [ "*" ]
  sources = [ "frame_encryptor_interface.h" ]
  deps = [
    "..:array_view",
    "..:rtp_parameters",
    "../../rtc_base:refcount",
  ]
}
